k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discodigg
  namespace: discodigg-prod
  labels: { app: discodigg }
spec:
  type: ClusterIP
  selector: { app: discodigg }
  ports:
    - name: http
      port: 80
      targetPort: 7777
#    - name: metrics
#      port: 7778
#      targetPort: 7778
# ---
# apiVersion: monitoring.coreos.com/v1
# kind: ServiceMonitor
# metadata:
#   name: discodigg
#   namespace: discodigg-prod
#   labels: { release: prom }
# spec:
#   selector:
#     matchLabels: { app: discodigg }
#   namespaceSelector:
#     matchNames: [ discodigg-prod ]
#   endpoints:
#     - port: metrics
#       path: /metrics
#       interval: 10s
