k8s/base/discodigg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discodigg
  namespace: discodigg-prod
  labels: { app: discodigg }
spec:
  replicas: 1
  selector:
    matchLabels: { app: discodigg }
  template:
    metadata: { labels: { app: discodigg } }
    spec:
      # imagePullSecrets: [ { name: ogrodje-regcred } ]
      containers:
        - name: discodigg
          image: ghcr.io/otobrglez/discodigg:0.0.7
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
            - name: metrics
              containerPort: 8082
              protocol: TCP

          args: [ "server", "--refresh-interval=PT360S", "/tmp/servers.yml" ]
          volumeMounts:
            - name: config-volume
              readOnly: true
              mountPath: /tmp/servers.yml
              subPath: servers.yml

      volumes:
        - name: config-volume
          configMap:
            name: servers-config

#         livenessProbe:
#           httpGet:
#             path: /grid
#             port: 7779
#           initialDelaySeconds: 45
#           periodSeconds: 10
#         readinessProbe:
#           httpGet:
#             path: /grid
#             port: 7779
#           initialDelaySeconds: 20
#           periodSeconds: 50
---
apiVersion: v1
kind: Service
metadata:
  name: discodigg
  namespace: discodigg-prod
  labels:
    app: discodigg
spec:
  selector: { app: discodigg }
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
    - name: metrics
      port: 8082
      targetPort: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discodigg
  namespace: discodigg-prod
  labels: { version: "2" }
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: discord.pinkstack.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discodigg
                port: { number: 80 }
